# DrumPyAnalysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: ruff.yml
data/measurements/maurice_drum_60fps_01/FULL/: Left_Elbow_x.html  Left_Elbow_y.html  Left_Elbow_z.html  Left_Foot_Index_x.html  Left_Foot_Index_y.html  Left_Foot_Index_z.html  Left_Heel_x.html  Left_Heel_y.html  Left_Heel_z.html  Left_Knee_x.html  Left_Knee_y.html  Left_Knee_z.html  Left_Wrist_x.html  Left_Wrist_y.html  Left_Wrist_z.html  Right_Elbow_x.html  Right_Elbow_y.html  Right_Elbow_z.html  Right_Foot_Index_x.html  Right_Foot_Index_y.html  Right_Foot_Index_z.html  Right_Heel_x.html  Right_Heel_y.html  Right_Heel_z.html  Right_Knee_x.html  Right_Knee_y.html  Right_Knee_z.html  Right_Wrist_x.html  Right_Wrist_y.html  Right_Wrist_z.html  results.txt
data/measurements/maurice_drum_60fps_01/HEAVY/: Left_Elbow_x.html  Left_Elbow_y.html  Left_Elbow_z.html  Left_Foot_Index_x.html  Left_Foot_Index_y.html  Left_Foot_Index_z.html  Left_Heel_x.html  Left_Heel_y.html  Left_Heel_z.html  Left_Knee_x.html  Left_Knee_y.html  Left_Knee_z.html  Left_Wrist_x.html  Left_Wrist_y.html  Left_Wrist_z.html  Right_Elbow_x.html  Right_Elbow_y.html  Right_Elbow_z.html  Right_Foot_Index_x.html  Right_Foot_Index_y.html  Right_Foot_Index_z.html  Right_Heel_x.html  Right_Heel_y.html  Right_Heel_z.html  Right_Knee_x.html  Right_Knee_y.html  Right_Knee_z.html  Right_Wrist_x.html  Right_Wrist_y.html  Right_Wrist_z.html  results.txt
data/measurements/maurice_drum_60fps_01/LITE/: Left_Elbow_x.html  Left_Elbow_y.html  Left_Elbow_z.html  Left_Foot_Index_x.html  (+27 more)
drumpy_analysis/: analyse_measurements.py  csv_comparison.py  measurement.py  plot_csv.py  plot_measurements.py  track_recordings.py
drumpy_analysis/csv_utils/: frame.py
drumpy_analysis/graphs/: deviations_boxplot.py  signal_stability.py  trajectory_lineplot.py
drumpy_analysis/measurement/: apply_scale_rotation.py  deviation.py  find_optimal_offset.py  find_optimal_rotation.py  find_optimal_scale.py  find_optimal_stretch.py  frame.py  frame_offset.py  marker.py  measurement.py
drumpy_analysis/qtm/: qtm_measurement.py  qtm_tracker.py  qtm_writer.py
src/drumpy_analysis/app/: camera_display.py  fps_display.py  main.py
src/drumpy_analysis/csv_utils/: csv_comparison.py
src/drumpy_analysis/qtm/: qtm_tracker.py  qtm_writer.py
src/drumpy_analysis/tracker/: mediapipe_pose.py
(+2050 files in other folders)
