[tool.poetry]
name = "drumpy-analysis"
version = "0.1.0"
description = ""
authors = ["Maurice Van Wassenhove <mauricevanwassenhove@fastmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
qtm-rt = "3.0.1"
bokeh = "3.4.0"
matplotlib = "3.8.3"
scipy = "^1.12.0"
drumpy = { path = "./DrumPy", develop = false }
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.0"
deptry = "0.14.2"

[tool.deptry]
exclude = ["DrumPy", ".venv", "data"]
