[tool.poetry]
name = "drumpy-analysis"
version = "0.1.0"
description = ""
authors = ["Maurice Van Wassenhove <mauricevanwassenhove@fastmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
bokeh = "3.4.1"
matplotlib = "3.8.4"
scipy = "^1.12.0"
drumpy = { path = "./DrumPy", develop = true }
pandas = "^2.2.1"
mediapipe = "^0.10.11"
selenium = "^4.20.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["selenium"]

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.0"
deptry = "0.16.1"
ruff-lsp = "^0.0.53"
ruff = "^0.4.0"

[tool.ruff.lint]
select = [ "E", "F", "N", "ANN", "B", "A", "C4", "PIE", "Q", "RET", "SLF", "SIM", "ARG", "PL", "PERF", "RUF"]
ignore = ["PLR0912", "PLR0913", "PLR0915"]
fixable = ["ALL"]
pylint.max-args = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.deptry]
exclude = ["DrumPy", ".venv", "data"]
